need add bottom navigation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="purple">#6A1B9A</color>
     <color name="dark_purple">#4A148C</color>
     <color name="yellow">#FDD835</color>
+    <color name="gold">#FFD700</color>
 </resources>
