--- a/app/src/main/res/drawable/button_background_1.xml
+++ b/app/src/main/res/drawable/button_background_1.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#241456" />
+    <solid android:color="#FF5722" />
     <corners android:radius="32dp" />
 </shape>
