--- a/app/src/main/res/layout/activity_landing.xml
+++ b/app/src/main/res/layout/activity_landing.xml
@@ -11,7 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#50389D"
+        android:background="#FF5722"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="24dp">
@@ -30,7 +30,7 @@
             android:layout_height="wrap_content"
             android:text="FoodEase"
             android:textColor="#FFFFFF"
-            android:textSize="24sp"
+            android:textSize="50sp"
             android:textStyle="bold" />
 
         <Space
@@ -45,7 +45,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
-            android:text="Login"
+            android:text="LOGIN"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/gold"
             android:textSize="24sp" />
 
         <Button
@@ -55,7 +57,9 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"
-            android:text="Sign Up"
+            android:text="REGISTER"
+            android:backgroundTint="@color/white"
+            android:textColor="@color/gold"
             android:textSize="24sp"/>
     </LinearLayout>
 
