--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,12 +5,13 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".ui.authentication.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_purple"
+        android:background="@color/gold"
         android:orientation="vertical">
 
         <LinearLayout
@@ -21,6 +22,7 @@
             android:orientation="horizontal"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
+            android:layout_marginTop="40dp"
             android:textAlignment="center">
 
             <ImageView
@@ -31,13 +33,15 @@
 
             <TextView
                 android:id="@+id/tvRegister"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="Login"
+                android:text="LOGIN"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
-                android:textSize="34sp" />
+                android:textSize="40sp"
+                android:textStyle="bold" />
+
 
         </LinearLayout>
 
@@ -45,7 +49,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="-24dp"
-            app:cardCornerRadius="24dp">
+            app:cardCornerRadius="24dp"
+            app:cardBackgroundColor="@color/white">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -69,36 +74,45 @@
                             android:id="@+id/tvUsername"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Username" />
+                            android:textColor="@color/black"
+                            android:text="Username"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/etUsername"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:ems="10"
+                            android:textColor="@color/black"
                             android:hint="Username"
                             android:inputType="text"
+                            android:textColorHint="@color/grey"
                             android:text="" />
 
                         <TextView
                             android:id="@+id/tvPassword"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Password" />
+                            android:textColor="@color/black"
+                            android:text="Password"
+                            android:textStyle="bold"/>
 
                         <EditText
                             android:id="@+id/etpPassword"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
+                            android:textColor="@color/black"
                             android:ems="10"
                             android:hint="********"
-                            android:inputType="textPassword" />
+                            android:inputType="textPassword"
+                            android:textColorHint="@color/grey"/>
 
                         <CheckBox
                             android:id="@+id/cbRememberMe"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="Remember Me"
+                            android:textColor="@color/black"
                             android:textAlignment="viewStart"
                             android:textSize="14sp" />
 
@@ -107,7 +121,9 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="48dp"
-                            android:text="Login"
+                            android:text="LOGIN"
+                            android:backgroundTint="@color/gold"
+                            android:textColor="@color/white"
                             android:textSize="16sp"
                             app:cornerRadius="24dp" />
 
