--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,23 +1,25 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/dark_purple"
+        android:background="@color/gold"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="140dp"
             android:baselineAligned="true"
             android:gravity="center"
             android:orientation="horizontal"
             android:paddingLeft="24dp"
             android:paddingRight="24dp"
+            android:layout_marginTop="50dp"
             android:textAlignment="center">
 
             <ImageView
@@ -31,10 +33,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Register"
+                android:text="REGISTER"
                 android:textAlignment="center"
                 android:textColor="#FFFFFF"
-                android:textSize="34sp" />
+                android:textSize="34sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
@@ -42,10 +45,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="-24dp"
-            android:paddingLeft="16dp"
-            android:paddingTop="24dp"
-            android:paddingRight="16dp"
-            app:cardCornerRadius="24dp">
+            app:cardCornerRadius="24dp"
+
+            app:cardBackgroundColor="@color/white">
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -59,100 +61,124 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
+                    <!-- Username -->
                     <TextView
                         android:id="@+id/tvUsername"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Username" />
+                        android:text="Username"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etUsername"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:ems="10"
-                        android:hint="John"
+                        android:hint="Username"
                         android:inputType="text"
-                        android:text="" />
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey" />
 
+                    <!-- Password -->
                     <TextView
                         android:id="@+id/tvPassword"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Password" />
+                        android:text="Password"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etpPassword"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:ems="10"
                         android:hint="********"
-                        android:inputType="textPassword" />
+                        android:inputType="textPassword"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey" />
 
+                    <!-- Confirm Password -->
                     <TextView
                         android:id="@+id/tvPasswordConfirm"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Confirm Password" />
+                        android:text="Confirm Password"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etpPasswordConfirm"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:ems="10"
                         android:hint="********"
-                        android:inputType="textPassword" />
+                        android:inputType="textPassword"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey" />
 
+                    <!-- Full Name -->
                     <TextView
                         android:id="@+id/tvName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Full Name" />
+                        android:text="Full Name"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etName"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:ems="10"
                         android:hint="John Doe"
                         android:inputType="text"
-                        android:text="" />
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey" />
 
+                    <!-- Phone Number -->
                     <TextView
                         android:id="@+id/tvMobile"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Phone No" />
+                        android:text="Phone No"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etMobile"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:ems="10"
                         android:hint="0123456789"
-                        android:inputType="text"
-                        android:text="" />
+                        android:inputType="phone"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey" />
 
+                    <!-- Address -->
                     <TextView
                         android:id="@+id/tvAddress"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Address" />
+                        android:text="Address"
+                        android:textColor="@color/black"
+                        android:textStyle="bold" />
 
                     <EditText
                         android:id="@+id/etAddress"
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
-                        android:ems="10"
                         android:hint="Home Address"
                         android:inputType="text"
-                        android:text="" />
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/grey" />
 
+                    <!-- Register Button -->
                     <Button
                         android:id="@+id/btnRegister"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="36dp"
-                        android:text="Register"
+                        android:backgroundTint="@color/gold"
+                        android:text="REGISTER"
+                        android:textColor="@color/white"
                         android:textSize="16sp"
                         app:cornerRadius="24dp" />
 
