--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#50389D"
+        android:background="#FF5722"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingBottom="24dp">
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:text="FoodEase"
             android:textColor="#FFFFFF"
-            android:textSize="24sp"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <ProgressBar
