--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -29,8 +29,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item Name"
+                android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/cart_item_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price: RM 0.00"
+                android:textColor="@color/black" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -44,15 +52,16 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:scaleType="centerInside"
-                    app:srcCompat="@drawable/minimize_sign" />
+                    app:srcCompat="@drawable/iconminus" />
 
                 <TextView
                     android:id="@+id/cart_item_quantity"
                     android:layout_width="40dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:gravity="center"
                     android:text="1"
-                    android:textSize="16sp" />
+                    android:textColor="@color/black"
+                    android:textSize="18sp" />
 
                 <ImageButton
                     android:id="@+id/increment_button"
@@ -61,16 +70,11 @@
                     android:layout_weight="1"
                     android:adjustViewBounds="true"
                     android:scaleType="centerInside"
-                    app:srcCompat="@drawable/plus" />
+                    app:srcCompat="@drawable/iconplus" />
 
             </LinearLayout>
 
 
-            <TextView
-                android:id="@+id/cart_item_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Price: RM 0.00" />
         </LinearLayout>
     </LinearLayout>
 </androidx.cardview.widget.CardView>
