--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,19 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home" />
-
+        android:title="Home" />
     <item
         android:id="@+id/navigation_ordercart"
         android:icon="@drawable/ic_shopping_cart"
-        android:title="@string/title_ordercart" />
-
+        android:title="Order Cart" />
     <item
         android:id="@+id/navigation_orderhistory"
         android:icon="@drawable/ic_order_history"
-        android:title="@string/title_orderhistory" />
-
+        android:title="Order History" />
 </menu>
