--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,9 @@
     <color name="purple">#6A1B9A</color>
     <color name="dark_purple">#4A148C</color>
     <color name="yellow">#FDD835</color>
-    <color name="gold">#FFD700</color>
+    <color name="gold">#ff5e00</color>
+    <color name="colorSelected">#FF5722</color>
+    <color name="colorUnselected">#757575</color>
+    <color name="grey">#808080</color>
+    <color name="light_grey">#D3D3D3</color>
 </resources>
