--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CustomButtonStyle1" parent="Widget.Material3.Button">
-        <item name="android:background">@drawable/button_background_1</item>
+        <item name="android:background">@drawable/orange_button</item>
         <item name="android:textColor">#F5F5F5</item>
         <item name="android:padding">12dp</item>
     </style>
@@ -9,7 +9,7 @@
     <!-- Custom button style 2 -->
     <style name="CustomButtonStyle2" parent="Widget.Material3.Button">
         <item name="android:background">@drawable/button_background_2</item>
-        <item name="android:textColor">#462B9C</item>
+        <item name="android:textColor">#FF5722</item>
         <item name="android:padding">14dp</item>
     </style>
 </resources>
