--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,12 +10,12 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/gold</item>
         <!-- Customize your theme here. -->
     </style>
     <style name="Theme.MadProject.Splash" parent="Theme.Material3.Dark">
         <item name="android:windowFullscreen">true</item>
-        <item name="android:windowBackground">@color/dark_purple</item> <!-- Set background color for Splash -->
+        <item name="android:windowBackground">@color/gold</item> <!-- Set background color for Splash -->
     </style>
 
 </resources>
