--- a/app/src/main/res/layout/activity_add_to_cart.xml
+++ b/app/src/main/res/layout/activity_add_to_cart.xml
@@ -87,7 +87,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Tax"
+                android:text="Tax (6%):"
                 android:textColor="#373b54"
                 android:textSize="18sp"
                 android:textStyle="bold" />
