--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gold"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -27,7 +26,7 @@
             android:layout_height="wrap_content"
             android:text="TextView"
             android:textAlignment="center"
-            android:textColor="@color/white"
+            android:textColor="@color/gold"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -40,12 +39,8 @@
             android:id="@+id/item_type"
             android:layout_width="135dp"
             android:layout_height="45dp"
-            android:layout_marginLeft="10dp"
             android:textAlignment="viewStart"
-            android:background="@android:drawable/editbox_background"
-            android:popupBackground="@android:color/white"
-            android:padding="8dp"
-            android:textColor="@android:color/black"/>
+            android:layout_marginLeft="10dp"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_foodMenu"
